cambiando el nombre del archivo .js, cambiando el title y enlazando index

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Atres</title>
+    <title>Pagina para el curso</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus suscipit nostrum aliquam recusandae aliquid quae voluptates, eum corporis nemo computadora controladora atres@gmail.com comandante tempore a aspernatur corrupti ullam neque, deleniti beatae, modi iure earum!</p>
+    <a href="https://youtube.com/atresxbot"></a>
+    <script src="main.js"></script>
 </body>
 </html>
